# YallaSQL

./: .gitignore  CMakeLists.txt  QA.md  README.md  build.sh  callgrind.out.271986  callgrind.out.272402  create_dataset.py  main.cpp  memo.md  report.md  run_release.sh  sanitizer_output_13691.txt  sanitizer_output_23886.txt  sanitizer_output_32421.txt  sanitizer_output_36199.txt  test_queries.txt  yallasql_history.txt
assets/: plotting.ipynb
benchmark/script/: ssb_to_ta_format.py
include/: batch.cu  batch.hpp  command.hpp  config.hpp  logger.hpp  null_bit_set.hpp  ui.hpp  utils.hpp
include/cli/: command.hpp  shell.hpp  ui.hpp
include/db/: column.hpp  db.hpp  our_duck.h  table.hpp
include/engine/: cache_manager.hpp  executor_engine.hpp  query_engine.hpp
include/engine/operators/: aggregate_operator.hpp  cross_product_operator.hpp  csv_writer.hpp  filter_operator.hpp  get_operator.hpp  join_operator.hpp  list.hpp  operator.hpp  order_operator.hpp  projection_operator.hpp
include/engine/operators/expressions/: aggregate.hpp  bound_func.hpp  bound_ref.hpp  bound_ref_sort.hpp  bound_value.hpp  cast.hpp  expression.hpp  list.hpp  op_cast.hpp
include/engine/operators/expressions/filters/: comparison.hpp  comparison_join.hpp  conjunction.hpp  conjunction_join.hpp
include/enums/: data_type.hpp  data_type_utils.hpp  device.hpp
include/kernels/: batch_wrapper.hpp  binary_operators_kernel.hpp  cast_operators_kernel.hpp  comparison_operators_kernel.hpp  constants.hpp  cross_product_kernel.hpp  merge_batchs.hpp  move_rows_kernel.hpp  prefix_sum.hpp  radix_sort_kernel.hpp  reduction_kernel.hpp  string_kernel.hpp
include/utils/: macros.hpp
src/: batch.cu
src/cli/: main.cpp  shell.cpp
src/csv/: csv_parser.cpp
src/db/: db.cpp  table.cpp
src/engine/: executor_engine.cpp  query_engine.cpp
src/engine/operators/: get_operator.cpp  operator.cpp  order_operator.cpp
src/engine/operators/expressions/: expression.cpp
src/kernels/: binary_operators_kernel.cu  cast_operators_kernel.cu  comparison_operators_kernel.cu  cross_product_kernel.cu  merge_batchs.cu  merge_kernel.cu  move_rows_kernel.cu  prefix_sum_kernel.cu  radix_sort_kernel.cu  radix_sort_uint32_kernel.cu  radix_sort_utils.cu  reduction_kernel.cu  sum_douple_kernel.cu
src/query/: query_engine.cpp
